# Real-Time-Multi-Camera-Object-Tracking-Pipeline

./: .gitignore
multi_cam_tracker/: CMakeLists.txt
multi_cam_tracker/include/: FrameGrabber.hpp  ThreadSafeQueue.hpp
multi_cam_tracker/src/: FrameGrabber.cpp  main.cpp
multi_cam_tracker/tests/: test_thread_safe_queue.cpp
